2019-1/230/users/4044/executions/1683_2474.log
== TEST (2019-04-20 01:27:24) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes
k = ano%100
j = int(ano/100)

if (mes == 1):
	m = 13
	ano = ano -1
if (mes == 2):
	m = 14
   ano = ano - 1
	
h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- ERROR:
File "XXXX", line 15
    ano = ano - 1
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 01:28:05) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes
k = ano%100
j = int(ano/100)

if (mes == 1):
	m = 13
	ano = ano -1
if (mes == 2):
	m = 14
  	ano = ano - 1
	
h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- EXECUTION TIME:
0.199745
-- ERROR:
  File "/home/codebench/codes/1683/2474/main.py", line 15
    ano = ano - 1
                ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:28:07) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes
k = ano%100
j = int(ano/100)

if (mes == 1):
	m = 13
	ano = ano -1
if (mes == 2):
	m = 14
  	ano = ano - 1
	
h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- ERROR:
File "XXXX", line 15
    ano = ano - 1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:28:27) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes
k = ano%100
j = int(ano/100)

if (mes == 1):
	m = 13	
if (mes == 2):
	m = 14  	
	
h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:28:43) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes
k = ano%100
j = int(ano/100)

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- OUTPUT:
quarta-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-20 01:29:46) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-20 01:29:56) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- EXECUTION TIME:
0.154755
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 17:58:10) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 17:58:24) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 17:58:35) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
if (h == 1):
	print("domingo")
if (h == 2):
	print("segunda-feira")
if (h == 3):
	print("terca-feira")
if (h == 4):
	print("quarta-feira")
if (h == 5):
	print("quinta-feira")
if (h == 6):
	print("sexta-feira")
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 20:17:27) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
elif (h == 1):
	print("domingo")
elif (h == 2):
	print("segunda-feira")
elif (h == 3):
	print("terca-feira")
elif (h == 4):
	print("quarta-feira")
elif (h == 5):
	print("quinta-feira")
(h == 6):
	print("sexta-feira")
-- EXECUTION TIME:
0.155005
-- ERROR:
  File "/home/codebench/codes/1683/2474/main.py", line 32
    (h == 6):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 20:17:37) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
elif (h == 1):
	print("domingo")
elif (h == 2):
	print("segunda-feira")
elif (h == 3):
	print("terca-feira")
elif (h == 4):
	print("quarta-feira")
elif (h == 5):
	print("quinta-feira")
else:
	print("sexta-feira")
-- EXECUTION TIME:
0.116356
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 20:17:51) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
elif (h == 1):
	print("domingo")
elif (h == 2):
	print("segunda-feira")
elif (h == 3):
	print("terca-feira")
elif (h == 4):
	print("quarta-feira")
elif (h == 5):
	print("quinta-feira")
else:
	print("sexta-feira")
-- EXECUTION TIME:
0.160839
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 20:17:56) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
elif (h == 1):
	print("domingo")
elif (h == 2):
	print("segunda-feira")
elif (h == 3):
	print("terca-feira")
elif (h == 4):
	print("quarta-feira")
elif (h == 5):
	print("quinta-feira")
else:
	print("sexta-feira")
-- EXECUTION TIME:
0.170794
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 20:18:04) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0)
	print("sabado")
elif (h == 1):
	print("domingo")
elif (h == 2):
	print("segunda-feira")
elif (h == 3):
	print("terca-feira")
elif (h == 4):
	print("quarta-feira")
elif (h == 5):
	print("quinta-feira")
else:
	print("sexta-feira")
-- EXECUTION TIME:
0.145673
-- ERROR:
  File "/home/codebench/codes/1683/2474/main.py", line 20
    if (h == 0)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 20:18:10) 
-- CODE:
dia = int(input("1.Digite o numero do DIA da data a ser analisada pelo algoritmo: "))
mes = int(input("2.Digite o numero do MES da data a ser analisada pelo algoritmo: "))
ano = int(input("3.Digite o ANO da data a ser analisade pelo algoritmo: "))

q = dia
m = mes

if (mes == 1):
	ano=ano-1
	m = 13	
if (mes == 2):
	ano=ano-1
	m = 14  	
	
k = ano%100
j = int(ano/100)

h = (q + int((13 * (m + 1))/5) + k + int(k/4) + int(j/4) + 5*j)%7

if (h == 0):
	print("sabado")
elif (h == 1):
	print("domingo")
elif (h == 2):
	print("segunda-feira")
elif (h == 3):
	print("terca-feira")
elif (h == 4):
	print("quarta-feira")
elif (h == 5):
	print("quinta-feira")
else:
	print("sexta-feira")
-- EXECUTION TIME:
0.137412
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
